# european-soccer-analytics

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  project_specification.md  pyproject.toml  requirements.txt  streamlit_app.py
nginx/: nginx.conf
scripts/: deploy.sh  health_check.py  init_db.sql  production_scheduler.py  run_etl.py  run_tests.sh  setup_and_test.sh  wait-for-postgres.sh
src/soccer_analytics/: __init__.py
src/soccer_analytics/analytics/: __init__.py  calculations.py  metrics.py
src/soccer_analytics/cli/: __init__.py
src/soccer_analytics/cli/commands/: __init__.py  analytics_commands.py  dashboard_commands.py  data_commands.py  database_commands.py
src/soccer_analytics/config/: __init__.py  database.py  settings.py
src/soccer_analytics/dashboard/: __init__.py  app.py  utils.py
src/soccer_analytics/dashboard/pages/: 01_League_Overview.py  02_Team_Analysis.py  03_Player_Search.py
src/soccer_analytics/data_models/: __init__.py  models.py
src/soccer_analytics/etl/: __init__.py  fetch.py  load.py  test_api.py
tests/: __init__.py
tests/integration/: test_database.py
tests/unit/: test_etl.py
